--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "react": "^16.8.6",
     "react-apollo": "^2.5.4",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-graphql": "^0.6.12",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.5.1"
   },
   "scripts": {
     "prestart": "npm run build",
